<resources>
    <string name="app_name">ISO 15693 NFC Reader</string>
    <string name="user_text_label">Standort</string>
    <string name="user_text_hint">Standort eingeben</string>
    <string name="target_url_label">Ziel-URL</string>
    <string name="target_url_hint">https://example.com/api?marker={marker}&amp;itemid={itemid}&amp;afi={afi}</string>
    <string name="nfc_status_ready">Bereit für ISO 15693 NFC-Scan</string>
    <string name="nfc_status_location_required">Standort für Scan erforderlich</string>
    <string name="nfc_status_paused">Kontinuierlicher Scan pausiert</string>
    <string name="nfc_status_disabled">NFC ist deaktiviert. Bitte in Einstellungen aktivieren.</string>
    <string name="nfc_status_unsupported">Dieses Gerät unterstützt kein NFC.</string>
    <string name="nfc_status_scanning">Kontinuierlicher Scan aktiv...</string>
    <string name="last_scan_title">Letzter NFC-Scan</string>
    <string name="history_title">Scan-Verlauf &amp; URL-Aufrufe</string>
    <string name="clear_history">Verlauf leeren</string>
    <string name="test_scan">Test-Scan ausführen</string>
    <string name="http_method">HTTP Methode</string>
    <string name="iso_15693_tag">ISO 15693 Tag</string>
    <string name="no_scans_yet">Noch keine NFC-Tags gescannt. Halten Sie ein ISO 15693 Tag an die Rückseite des Smartphones.</string>

    <!-- Settings Strings -->
    <string name="settings_title">Einstellungen</string>
    <string name="settings_target_url_section">Ziel-URL Konfiguration</string>
    <string name="settings_target_url_desc">Die Ziel-URL, an die NFC-Scan-Ereignisse übermittelt werden.\nPlatzhalter: {marker}, {session}, {uid}, {raw}, {itemid}, {afi}, {country}, {isil}, {parts}, {partno}, {usagetype}, {version}, {timestamp}, {jwt}</string>
    <string name="settings_jwt_section">JWT Authentifizierung</string>
    <string name="settings_jwt_desc">Optionaler JSON Web Token (JWT). Wenn hinterlegt, wird er automatisch als \'Authorization: Bearer &lt;token&gt;\' Header bei jedem Scan übertragen.</string>
    <string name="settings_jwt_label">JWT Key / Token</string>
    <string name="settings_passwords_section">Passwort-Konfiguration (ISO 15693)</string>
    <string name="settings_passwords_desc">32-Bit Hexadezimal-Passwörter für AFI- und Schreiboperationen auf geschützten Tags (z. B. ICODE SLIX). Standardwert: 00000000.</string>
    <string name="settings_use_afi_password_label">AFI-Passwort verwenden</string>
    <string name="settings_afi_password_label">AFI-Passwort (32-Bit Hex)</string>
    <string name="settings_afi_password_hint">z.B. 00000000</string>
    <string name="settings_use_write_password_label">Write-Passwort verwenden</string>
    <string name="settings_write_password_label">Write-Passwort (32-Bit Hex)</string>
    <string name="settings_write_password_hint">z.B. 00000000</string>
    <string name="settings_password_invalid_hex">Ungültige 32-Bit Hex-Zahl (genau 8 Hex-Zeichen 0-9, A-F erforderlich)</string>
    <string name="settings_debug_section">Debug-Modus</string>
    <string name="settings_debug_desc">Gibt bei jedem Scan-Vorgang den vollständigen HTTP-Request (URL, Header, Body) aus.</string>
    <string name="settings_debug_label">HTTP-Request Debug aktivieren</string>
    <string name="btn_copy_debug">Kopieren</string>
    <string name="debug_copied_to_clipboard">Debug-Ausgabe in Zwischenablage kopiert</string>
    <string name="settings_save">Speichern</string>
    <string name="settings_saved_toast">Einstellungen gespeichert</string>
    <string name="settings_invalid_dialog_title">Ungültige Einstellungen</string>
    <string name="settings_invalid_dialog_message">Die Einstellungen enthalten fehlerhafte Angaben und konnten nicht gespeichert werden. Möchten Sie die Änderungen verwerfen oder korrigieren?</string>
    <string name="settings_invalid_dialog_discard">Verwerfen</string>
    <string name="settings_invalid_dialog_edit">Korrigieren</string>
    <string name="action_settings">Einstellungen</string>

    <!-- Navigation -->
    <string name="nav_scan">Scan</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_log">Log</string>

    <!-- Log Mode Strings -->
    <string name="log_title">System- &amp; Debug-Logs</string>
    <string name="log_clear">Logs leeren</string>
    <string name="log_copy">Kopieren</string>
    <string name="log_copied_toast">Logs in Zwischenablage kopiert</string>
    <string name="log_empty">Keine Logs vorhanden. Vorgänge in der App werden hier für das Debugging protokolliert.</string>
    <string name="log_filter_all">Alle</string>
    <string name="log_filter_debug">Debug</string>
    <string name="log_filter_info">Info</string>
    <string name="log_filter_warn">Warn</string>
    <string name="log_filter_error">Error</string>
    <string name="log_auto_scroll">Auto-Scroll</string>

    <!-- Edit Mode Strings -->
    <string name="btn_edit_read">Lesen</string>
    <string name="btn_edit_write">Schreiben</string>
    <string name="btn_edit_toggle_afi">AFI umschalten</string>
    <string name="btn_edit_disable_afi_password">AFI-Passwort deaktivieren</string>
    <string name="btn_edit_test">Test-Tag</string>
    <string name="edit_status_ready">Bereit. Wählen Sie eine Aktion (z.B. \'Lesen\').</string>
    <string name="edit_status_reading">Halten Sie ein ISO 15693 Tag an die Rückseite zum Lesen...</string>
    <string name="edit_status_writing">Halten Sie ein ISO 15693 Tag an die Rückseite zum Schreiben...</string>
    <string name="edit_status_toggling_afi">Halten Sie ein ISO 15693 Tag an zum AFI-Umschalten...</string>
    <string name="edit_status_disabling_afi_password">Halten Sie ein ISO 15693 Tag an zum Deaktivieren des AFI-Passworts...</string>
    <string name="edit_status_read_success">Tag erfolgreich gelesen: %1$s</string>
    <string name="edit_status_write_success">Tag erfolgreich geschrieben!</string>
    <string name="edit_status_afi_success">AFI Status geändert auf %1$s</string>
    <string name="edit_status_disable_afi_password_success">AFI-Passwort erfolgreich entfernt / deaktiviert!</string>
    <string name="edit_status_unsupported_tag">Nur ISO 15693 (NfcV) Tags werden im Edit-Modus unterstützt.</string>
    <string name="edit_inspector_title">Transponder-Informationen</string>
    <string name="edit_library_data_title">Bibliotheksdaten (ISO 28560)</string>
    <string name="edit_raw_hexdump_title">Block-Rohdaten (Hex-Dump)</string>
    <string name="edit_field_uid">UID / TID</string>
    <string name="edit_field_tag_type">Transponder-Typ</string>
    <string name="edit_field_manufacturer">Hersteller</string>
    <string name="edit_field_model">Chipmodell</string>
    <string name="edit_field_flags">Flags (XTID/Sec/File)</string>
    <string name="edit_field_serial">Seriennummer</string>
    <string name="edit_field_afi_status">AFI Status</string>
    <string name="edit_field_afi_password_protect">AFI-Schutz</string>
    <string name="edit_field_data_write_protect">Schreibschutz</string>
    <string name="edit_field_crc_status">CRC Prüfsumme</string>
    <string name="edit_field_item_id">Barcode / Primary Item-ID</string>
    <string name="edit_field_item_id_hint">Item-ID (max. 16 Zeichen)</string>
    <string name="edit_field_country">Ländercode</string>
    <string name="edit_field_country_hint">z.B. CH, DE</string>
    <string name="edit_field_isil">ISIL Kennung</string>
    <string name="edit_field_isil_hint">z.B. ISIL-123</string>
    <string name="edit_field_part_no">Teil-Nr.</string>
    <string name="edit_field_parts">Gesamt</string>
    <string name="edit_field_usage_type">Nutzungsart (Usage Type)</string>
    <string name="edit_field_version">Version</string>
    <string name="edit_field_afi">AFI (Hex)</string>
    <string name="edit_field_afi_hint">z.B. 07 oder C2</string>
    <string name="edit_crc_valid">Gültig (OK)</string>
    <string name="edit_crc_invalid">Fehler / Ungültig</string>
    <string name="edit_afi_secured">07 (Gesichert)</string>
    <string name="edit_afi_loaned">C2 (Ausgeliehen)</string>

    <!-- About / Copyright -->
    <string name="copyright_notice">© 2026 info-age GmbH, Basel\nLizenziert unter Apache License 2.0</string>
</resources>
